[feat] connect database

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ JWT_EXPIRE=10M
 
 JWT_REFRESH_TOKEN_SECRET=fdgdgdfgdfdfgdfgdfgdfgdfgdfgdfgcxvxcvcvxcvxzxczxczfsdfsd
 JWT_REFRESH_TOKEN_EXPIRE=1d
+
+DB_USER=admin
+DB_PASSWORD=PrnGm730n1O9iwHqNM4cbBXiBX9dprvo
+DB_HOST=dpg-cn9mvi779t8c73bcql50-a.singapore-postgres.render.com
+DB_NAME=phamacy_app
+DB_PORT=5432
