[feat] add patient and login

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ DB_PASSWORD=PrnGm730n1O9iwHqNM4cbBXiBX9dprvo
 DB_HOST=dpg-cn9mvi779t8c73bcql50-a.singapore-postgres.render.com
 DB_NAME=phamacy_app
 DB_PORT=5432
+
+
+CLOUD_NAME=djimb5xj6
+API_KEY=824666852473328
+API_SECRET=XoWg7xRfAPQUJvlWsXsjbFCaWos
