--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "nest start",
     "format": "pretty-quick",
     "lint": "eslint --max-warnings 0 \"{src,apps,libs,test}/**/*.ts\"",
+    "lint-fix": "eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
     "lint-staged": "lint-staged"
   },
   "dependencies": {
